kubernetes/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: movieapp
  labels:
    name: movieapp
