kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: movieapp-deployment
  namespace: movieapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: movieapp-kiii
  template:
    metadata:
      labels:
        app: movieapp-kiii
    spec:
      containers:
        - name: movieapp-kiii
          image: martinaristeska/movieapp-image:latest
          ports:
            - containerPort: 9090  
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 9090
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 9090
            initialDelaySeconds: 15
            periodSeconds: 20
