kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: movieapp-service
  namespace: movieapp
spec:
  selector:
    app: movieapp-kiii
  ports:
    - protocol: TCP
      port: 9090
      targetPort: 9090
  type: ClusterIP
