kubernetes/statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: movieapp-postgres
  namespace: movieapp
spec:
  serviceName: "movieapp-db"
  replicas: 3
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:latest
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-persistent-storage
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-persistent-storage
          persistentVolumeClaim:
            claimName: postgres-db-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: movieapp-db
  namespace: movieapp
spec:
  ports:
    - port: 5432
      name: postgres
      protocol: TCP
  selector:
    app: postgres
  clusterIP: None
